build.gradle ソースファイルのエンコードをUTF-8を指定

--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,9 @@ plugins {
     id 'eclipse'
 }
 
+compileJava.options.encoding = 'UTF-8'
+compileTestJava.options.encoding = 'UTF-8'
+
 repositories {
     jcenter()
 }
